@@ -131,10 +131,10 @@ ld/
 	* scripttempl/elf.sc: Support sharable sections.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index 889ce12..fdcfa92 100644
+index aa78ecd..8a4d3a9 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -2125,6 +2125,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
+@@ -2141,6 +2141,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
    (bfd *, struct bfd_link_info *);
  extern bfd_boolean _bfd_elf_add_dynamic_entry
    (struct bfd_link_info *, bfd_vma, bfd_vma);
@@ -164,10 +164,10 @@ index 889ce12..fdcfa92 100644
  extern bfd_boolean bfd_elf_link_record_dynamic_symbol
    (struct bfd_link_info *, struct elf_link_hash_entry *);
 diff --git a/bfd/elf.c b/bfd/elf.c
-index cb3f72f..fe51f27 100644
+index b8bb6d3..db90308 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -2110,6 +2110,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
+@@ -2093,6 +2093,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
    { STRING_COMMA_LEN (".gnu.liblist"),     0, SHT_GNU_LIBLIST, SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.conflict"),    0, SHT_RELA,        SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.hash"),        0, SHT_GNU_HASH,    SHF_ALLOC },
@@ -176,7 +176,7 @@ index cb3f72f..fe51f27 100644
    { NULL,                        0,        0, 0,               0 }
  };
  
-@@ -2164,6 +2166,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
+@@ -2147,6 +2149,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
    /* See struct bfd_elf_special_section declaration for the semantics of
       this special case where .prefix_length != strlen (.prefix).  */
    { ".stabstr",			5,  3, SHT_STRTAB, 0 },
@@ -185,7 +185,7 @@ index cb3f72f..fe51f27 100644
    { NULL,                       0,  0, 0,          0 }
  };
  
-@@ -3609,6 +3613,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
+@@ -3607,6 +3611,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
  	}
      }
  
@@ -218,7 +218,7 @@ index cb3f72f..fe51f27 100644
    /* Let the backend count up any program headers it might need.  */
    bed = get_elf_backend_data (abfd);
    if (bed->elf_backend_additional_program_headers)
-@@ -3780,6 +3810,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -3778,6 +3808,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
        bfd_boolean phdr_in_segment = TRUE;
        bfd_boolean writable;
        int tls_count = 0;
@@ -227,7 +227,7 @@ index cb3f72f..fe51f27 100644
        asection *first_tls = NULL;
        asection *dynsec, *eh_frame_hdr;
        bfd_size_type amt;
-@@ -4087,6 +4119,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4085,6 +4117,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  		first_tls = s;
  	      tls_count++;
  	    }
@@ -250,7 +250,7 @@ index cb3f72f..fe51f27 100644
  	}
  
        /* If there are any SHF_TLS output sections, add PT_TLS segment.  */
-@@ -4114,6 +4162,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4112,6 +4160,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  	  pm = &m->next;
  	}
  
@@ -311,7 +311,7 @@ index cb3f72f..fe51f27 100644
        /* If there is a .eh_frame_hdr section, throw in a PT_GNU_EH_FRAME
  	 segment.  */
        eh_frame_hdr = elf_tdata (abfd)->eh_frame_hdr;
-@@ -4651,6 +4753,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
+@@ -4653,6 +4755,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
  	  align = (bfd_size_type) 1 << bfd_get_section_alignment (abfd, sec);
  
  	  if ((p->p_type == PT_LOAD
@@ -320,7 +320,7 @@ index cb3f72f..fe51f27 100644
  	      && (this_hdr->sh_type != SHT_NOBITS
  		  || ((this_hdr->sh_flags & SHF_ALLOC) != 0
 diff --git a/bfd/elf32-i386.c b/bfd/elf32-i386.c
-index 7d3652d..c239712 100644
+index 1b04a6e..87d15d0 100644
 --- a/bfd/elf32-i386.c
 +++ b/bfd/elf32-i386.c
 @@ -813,6 +813,9 @@ struct elf_i386_link_hash_table
@@ -391,7 +391,7 @@ index 7d3652d..c239712 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2769,6 +2789,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
+@@ -2914,6 +2934,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
  	       || s == htab->elf.iplt
  	       || s == htab->elf.igotplt
  	       || s == htab->plt_eh_frame
@@ -399,7 +399,7 @@ index 7d3652d..c239712 100644
  	       || s == htab->sdynbss)
  	{
  	  /* Strip these too.  */
-@@ -4591,21 +4612,27 @@ do_glob_dat:
+@@ -4736,21 +4757,27 @@ do_glob_dat:
      {
        Elf_Internal_Rela rel;
        bfd_byte *loc;
@@ -430,7 +430,7 @@ index 7d3652d..c239712 100644
        bfd_elf32_swap_reloc_out (output_bfd, &rel, loc);
      }
  
-@@ -4925,7 +4952,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -5070,7 +5097,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -440,7 +440,7 @@ index 7d3652d..c239712 100644
  }
  
  #define TARGET_LITTLE_SYM		bfd_elf32_i386_vec
-@@ -4979,6 +5007,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -5124,6 +5152,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
  #undef	elf_backend_post_process_headers
  #define	elf_backend_post_process_headers	_bfd_elf_set_osabi
  
@@ -461,7 +461,7 @@ index 7d3652d..c239712 100644
  
  /* FreeBSD support.  */
 diff --git a/bfd/elf64-x86-64.c b/bfd/elf64-x86-64.c
-index a29ba8a..1cfac84 100644
+index d58384f..82b6d96 100644
 --- a/bfd/elf64-x86-64.c
 +++ b/bfd/elf64-x86-64.c
 @@ -763,6 +763,9 @@ struct elf_x86_64_link_hash_table
@@ -534,7 +534,7 @@ index a29ba8a..1cfac84 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2813,6 +2833,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
+@@ -2959,6 +2979,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
  	  || s == htab->plt_eh_frame
@@ -542,7 +542,7 @@ index a29ba8a..1cfac84 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -4495,13 +4516,19 @@ do_glob_dat:
+@@ -4641,13 +4662,19 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rela;
@@ -563,7 +563,7 @@ index a29ba8a..1cfac84 100644
  	abort ();
  
        rela.r_offset = (h->root.u.def.value
-@@ -4509,7 +4536,7 @@ do_glob_dat:
+@@ -4655,7 +4682,7 @@ do_glob_dat:
  		       + h->root.u.def.section->output_offset);
        rela.r_info = htab->r_info (h->dynindx, R_X86_64_COPY);
        rela.r_addend = 0;
@@ -572,7 +572,7 @@ index a29ba8a..1cfac84 100644
      }
  
    return TRUE;
-@@ -4842,7 +4869,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
+@@ -4988,7 +5015,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -582,7 +582,7 @@ index a29ba8a..1cfac84 100644
  }
  
  
-@@ -4858,7 +4886,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -5004,7 +5032,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
        *index_return = SHN_X86_64_LCOMMON;
        return TRUE;
      }
@@ -592,7 +592,7 @@ index a29ba8a..1cfac84 100644
  }
  
  /* Process a symbol.  */
-@@ -4876,22 +4905,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -5022,22 +5051,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
        asym->value = elfsym->internal_elf_sym.st_size;
        /* Common symbol doesn't set BSF_GLOBAL.  */
        asym->flags &= ~BSF_GLOBAL;
@@ -621,7 +621,7 @@ index a29ba8a..1cfac84 100644
    else
      return SHN_X86_64_LCOMMON;
  }
-@@ -4900,7 +4933,7 @@ static asection *
+@@ -5046,7 +5079,7 @@ static asection *
  elf_x86_64_common_section (asection *sec)
  {
    if ((elf_section_flags (sec) & SHF_X86_64_LARGE) == 0)
@@ -630,7 +630,7 @@ index a29ba8a..1cfac84 100644
    else
      return &_bfd_elf_large_com_section;
  }
-@@ -4937,7 +4970,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -5083,7 +5116,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
        && h->root.type == bfd_link_hash_common
        && !*newdef
        && bfd_is_com_section (*sec)
@@ -640,7 +640,7 @@ index a29ba8a..1cfac84 100644
      {
        if (sym->st_shndx == SHN_COMMON
  	  && (elf_section_flags (*oldsec) & SHF_X86_64_LARGE) != 0)
-@@ -4945,13 +4979,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -5091,13 +5125,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
  	  h->root.u.c.p->section
  	    = bfd_make_section_old_way (oldbfd, "COMMON");
  	  h->root.u.c.p->section->flags = SEC_ALLOC;
@@ -670,10 +670,10 @@ index a29ba8a..1cfac84 100644
  
  static int
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index d9e1abe..3eb9b86 100644
+index 2fcbac3..7ebc744 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
-@@ -383,6 +383,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
+@@ -386,6 +386,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
  	  if (s == NULL
  	      || ! bfd_set_section_alignment (abfd, s, bed->s->log_file_align))
  	    return FALSE;
@@ -701,7 +701,7 @@ index d9e1abe..3eb9b86 100644
  	}
      }
  
-@@ -12932,3 +12953,219 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
+@@ -13084,3 +13105,219 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
    BFD_ASSERT (loc + bed->s->sizeof_rel <= s->contents + s->size);
    bed->s->swap_reloca_out (abfd, rel, loc);
  }
@@ -922,7 +922,7 @@ index d9e1abe..3eb9b86 100644
 +  return TRUE;
 +}
 diff --git a/bfd/elfnn-ia64.c b/bfd/elfnn-ia64.c
-index d90b226..cdc84b2 100644
+index afa1e04..95d6584 100644
 --- a/bfd/elfnn-ia64.c
 +++ b/bfd/elfnn-ia64.c
 @@ -1056,7 +1056,8 @@ elfNN_ia64_add_symbol_hook (bfd *abfd,
@@ -956,10 +956,10 @@ index d90b226..cdc84b2 100644
     SHF_LINK_ORDER. But it doesn't set the sh_link or sh_info fields.
     We don't want to flood users with so many error messages. We turn
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index b1bacfd..2c1bc86 100644
+index 7877539..4a9ba1b 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -1335,6 +1335,8 @@ dump_relocations (FILE * file,
+@@ -1375,6 +1375,8 @@ dump_relocations (FILE * file,
  			sec_name = "ABS";
  		      else if (psym->st_shndx == SHN_COMMON)
  			sec_name = "COMMON";
@@ -968,7 +968,7 @@ index b1bacfd..2c1bc86 100644
  		      else if ((elf_header.e_machine == EM_MIPS
  				&& psym->st_shndx == SHN_MIPS_SCOMMON)
  			       || (elf_header.e_machine == EM_TI_C6000
-@@ -2803,6 +2805,7 @@ get_segment_type (unsigned long p_type)
+@@ -2940,6 +2942,7 @@ get_segment_type (unsigned long p_type)
      case PT_SHLIB:	return "SHLIB";
      case PT_PHDR:	return "PHDR";
      case PT_TLS:	return "TLS";
@@ -976,7 +976,7 @@ index b1bacfd..2c1bc86 100644
  
      case PT_GNU_EH_FRAME:
  			return "GNU_EH_FRAME";
-@@ -8910,6 +8913,8 @@ get_symbol_index_type (unsigned int type)
+@@ -9131,6 +9134,8 @@ get_symbol_index_type (unsigned int type)
      case SHN_UNDEF:	return "UND";
      case SHN_ABS:	return "ABS";
      case SHN_COMMON:	return "COM";
@@ -986,18 +986,18 @@ index b1bacfd..2c1bc86 100644
        if (type == SHN_IA_64_ANSI_COMMON
  	  && elf_header.e_machine == EM_IA_64
 diff --git a/gas/config/obj-elf.c b/gas/config/obj-elf.c
-index d7c7665..3385b96 100644
+index 6450328..da0d882 100644
 --- a/gas/config/obj-elf.c
 +++ b/gas/config/obj-elf.c
-@@ -73,6 +73,7 @@ static void obj_elf_symver (int);
- static void obj_elf_subsection (int);
+@@ -74,6 +74,7 @@ static void obj_elf_subsection (int);
  static void obj_elf_popsection (int);
+ static void obj_elf_gnu_attribute (int);
  static void obj_elf_tls_common (int);
 +static void obj_elf_sharable_common (int);
  static void obj_elf_lcomm (int);
  static void obj_elf_struct (int);
  
-@@ -130,6 +131,8 @@ static const pseudo_typeS elf_pseudo_table[] =
+@@ -134,6 +135,8 @@ static const pseudo_typeS elf_pseudo_table[] =
  
    {"tls_common", obj_elf_tls_common, 0},
  
@@ -1006,7 +1006,7 @@ index d7c7665..3385b96 100644
    /* End sentinel.  */
    {NULL, NULL, 0},
  };
-@@ -385,6 +388,39 @@ obj_elf_tls_common (int ignore ATTRIBUTE_UNUSED)
+@@ -389,6 +392,39 @@ obj_elf_tls_common (int ignore ATTRIBUTE_UNUSED)
  }
  
  static void
@@ -1046,7 +1046,7 @@ index d7c7665..3385b96 100644
  obj_elf_lcomm (int ignore ATTRIBUTE_UNUSED)
  {
    symbolS *symbolP = s_comm_internal (0, s_lcomm_internal);
-@@ -603,11 +639,17 @@ obj_elf_change_section (const char *name,
+@@ -607,11 +643,17 @@ obj_elf_change_section (const char *name,
  
  		 .section .lbss,"aw",@progbits
  
@@ -1065,7 +1065,7 @@ index d7c7665..3385b96 100644
  	      && ssect->type != SHT_FINI_ARRAY
  	      && ssect->type != SHT_PREINIT_ARRAY)
 diff --git a/include/bfdlink.h b/include/bfdlink.h
-index d900b47..0c0adc2 100644
+index bf44dee..b8a3742 100644
 --- a/include/bfdlink.h
 +++ b/include/bfdlink.h
 @@ -387,6 +387,9 @@ struct bfd_link_info
@@ -1079,7 +1079,7 @@ index d900b47..0c0adc2 100644
       flags.  */
    unsigned int execstack: 1;
 diff --git a/include/elf/common.h b/include/elf/common.h
-index 58e489a..9e74320 100644
+index 4399d02..38ceb94 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
 @@ -434,6 +434,7 @@
@@ -1099,7 +1099,7 @@ index 58e489a..9e74320 100644
  /* Values of note segment descriptor types for core files.  */
  
  #define NT_PRSTATUS	1		/* Contains copy of prstatus struct */
-@@ -670,6 +673,9 @@
+@@ -676,6 +679,9 @@
  #define STT_LOPROC	13		/* Processor-specific semantics */
  #define STT_HIPROC	15		/* Processor-specific semantics */
  
@@ -1131,14 +1131,17 @@ index 7e5e54d..d8cf531 100644
  SMALL_DATA_DTOR=" "
 +SHARABLE_SECTIONS=yes
 diff --git a/ld/emulparams/elf_i386.sh b/ld/emulparams/elf_i386.sh
-index 665a1ad..3a93f37 100644
+index add700f..dc2d6ef 100644
 --- a/ld/emulparams/elf_i386.sh
 +++ b/ld/emulparams/elf_i386.sh
-@@ -13,3 +13,4 @@ GENERATE_PIE_SCRIPT=yes
+@@ -13,6 +13,7 @@ GENERATE_PIE_SCRIPT=yes
  NO_SMALL_DATA=yes
  SEPARATE_GOTPLT="SIZEOF (.got.plt) >= 12 ? 12 : 0"
  IREL_IN_PLT=
 +SHARABLE_SECTIONS=yes
+ 
+ # Linux modify the default library search path to first include
+ # a 32-bit specific directory.
 diff --git a/ld/emulparams/elf_x86_64.sh b/ld/emulparams/elf_x86_64.sh
 index f1b60cb..f41afab 100644
 --- a/ld/emulparams/elf_x86_64.sh
@@ -1152,7 +1155,7 @@ index f1b60cb..f41afab 100644
  if [ "x${host}" = "x${target}" ]; then
    case " $EMULATION_LIBPATH " in
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index 2b7a352..f9b15e5 100644
+index 9e263a9..b1fed31 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -104,6 +104,7 @@ gld${EMULATION_NAME}_before_parse (void)
@@ -1177,10 +1180,10 @@ index 2b7a352..f9b15e5 100644
        && link_info.combreloc
        && (s->flags & SEC_ALLOC))
 diff --git a/ld/ldmain.c b/ld/ldmain.c
-index 3bdaf4d..6244a50 100644
+index 07f5f09..8f211db 100644
 --- a/ld/ldmain.c
 +++ b/ld/ldmain.c
-@@ -288,6 +288,7 @@ main (int argc, char **argv)
+@@ -291,6 +291,7 @@ main (int argc, char **argv)
    link_info.pei386_auto_import = -1;
    link_info.spare_dynamic_tags = 5;
    link_info.path_separator = ':';
@@ -1189,7 +1192,7 @@ index 3bdaf4d..6244a50 100644
    ldfile_add_arch ("");
    emulation = get_emulation (argc, argv);
 diff --git a/ld/scripttempl/elf.sc b/ld/scripttempl/elf.sc
-index 17c2cf1..2a7e715 100644
+index 72d2af7..3a593bd 100644
 --- a/ld/scripttempl/elf.sc
 +++ b/ld/scripttempl/elf.sc
 @@ -299,6 +299,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
